--- a/Game Client/MainWindow.xaml
+++ b/Game Client/MainWindow.xaml
@@ -7,9 +7,9 @@
         mc:Ignorable="d"
         Title="Project Chimera" Height="350" Width="525" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen">
     <Grid>
-
-        <Grid Name="LoginMenu" HorizontalAlignment="Center" Height="299" Margin="0,0,0,0" VerticalAlignment="Center" Width="497">
-            <GroupBox x:Name="logingroup" Header="Login" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" Height="182" Width="178">
+        <Image Name="GameWindow" Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Panel.ZIndex="-1"  />
+        <Grid Name="LoginMenu" HorizontalAlignment="Center" Height="298" Margin="0,0,0,0" VerticalAlignment="Center" Width="497" Opacity="100">
+            <GroupBox x:Name="logingroup" Header="Login" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" Height="182" Width="178" Background="White">
                 <Grid Margin="0,0,0,-12">
                     <Label x:Name="lbluser" Content="Username:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
                     <TextBox x:Name="txtusername" HorizontalAlignment="Left" Height="23" Margin="10,36,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146"/>
